# vlak

./: .gitignore  BitVector.cpp  BitVector.h  BlocksProviderFromWaveReader.cpp  BlocksProviderFromWaveReader.h  CMakeLists.txt  File.cpp  File.h  LICENSE  Makefile  README.md  WaveFile.cpp  WaveFile.h  WaveTypes.h  analyzer.h  cbitstream.h  cblock.cpp  cblock.h  cblockinfo.cpp  cblockinfo.h  cfftcompressedframe.cpp  cfftcompressedframe.h  cfftpredictor.cpp  cfftpredictor.h  cfircompressedframe.cpp  cfircompressedframe.h  cfirpredictor.h  clpcpredictor.cpp  clpcpredictor.h  clpcriceframe.cpp  clpcriceframe.h  compute_crcp.pl  compute_time.pl  csample.h  csimplecompressedframe.cpp  csimplecompressedframe.h  cvlakfile.h  cvlakheader.h  cwavfile.h  do_plot.pl  (+30 more)
.github/workflows/: cmake-multi-platform.yml
RiceCoder/: RiceCoderTests.cpp  RiceCoderTests.h  cbitstream.cpp  cbitstream.h  cricecoder.cpp  cricecoder.h  program.cpp
docs/: koda_sprawozdanie.odt
packet/: Makefile  Makefile.unix
packet/include/: blockpool.h  costbase.h  costshannon.h  costthresh.h  daub.h  fifo_list.h  grow_array.h  haar.h  haar_classic.h  haar_classicFreq.h  invpacktree.h  liftbase.h  line.h  list.h  packcontainer.h  packdata.h  packdata_list.h  packfreq.h  packnode.h  packtree.h  queue.h
packet/lossless/: Makefile
packet/lossless/include/: invpacktree_int.h  line_int.h  packcontainer_int.h  support.h
packet/lossless/srcvlak/: cwaveletcompressedframe.cpp  cwaveletcompressedframe.h  cwaveletpredictor.h
packet/src/: blockpool.cpp  local_new.cpp
